--- a/requirements.txt
+++ b/requirements.txt
@@ -1,14 +1,15 @@
 alembic==1.4.0
 Babel==2.8.0
 blinker==1.4
+cachetools==4.0.0
 certifi==2019.11.28
 chardet==3.0.4
 Click==7.0
-facebook-sdk==4.0.0rc0
 Flask==1.1.1
 Flask-Admin==1.5.5
 Flask-BabelEx==0.9.4
 Flask-Dance==3.0.0
+Flask-Ext==0.1
 Flask-Login==0.5.0
 Flask-Mail==0.9.1
 Flask-Migrate==2.5.2
@@ -21,6 +22,11 @@ Flask-Security==3.0.0
 Flask-Social==1.6.2
 Flask-SQLAlchemy==2.4.1
 Flask-WTF==0.14.3
+google-api-core==1.16.0
+google-api-python-client==1.8.0
+google-auth==1.11.3
+google-auth-httplib2==0.0.3
+googleapis-common-protos==1.51.0
 httplib2==0.17.0
 idna==2.9
 import-string==0.1.0
@@ -30,13 +36,19 @@ jsonify==0.5
 Mako==1.1.1
 manage==0.1.13
 MarkupSafe==1.1.1
+mongoengine==0.19.1
 mysql-connector==2.2.9
 numpy==1.18.1
 oauth==1.0.1
 oauth2==1.9.0.post1
+oauth2client==4.1.3
 oauthlib==3.1.0
 pandas==1.0.1
 passlib==1.7.2
+protobuf==3.11.3
+pyasn1==0.4.8
+pyasn1-modules==0.2.8
+pymongo==3.10.1
 python-dateutil==2.8.1
 python-editor==1.0.4
 pytz==2019.3
@@ -44,9 +56,11 @@ PyYAML==5.3
 query==0.1.4
 requests==2.23.0
 requests-oauthlib==1.3.0
+rsa==4.0
 six==1.14.0
 speaklater==1.3
 SQLAlchemy==1.3.13
+uritemplate==3.0.1
 urllib3==1.25.8
 URLObject==2.4.3
 validate-email==1.3
