--- a/requirements.txt
+++ b/requirements.txt
@@ -1,67 +1,82 @@
-alembic==1.4.0
-Babel==2.8.0
+aiohttp==3.6.2
+alembic==1.3.2
+algorithmia==1.2.1
+algorithmia-api-client==1.1.0
+asgiref==3.2.3
+async-timeout==3.0.1
+attrs==19.3.0
+autocomplete==0.0.104
+bcrypt==3.1.7
 blinker==1.4
-cachetools==4.0.0
-certifi==2019.11.28
+bottle==0.12.18
+certifi==2019.9.11
+cffi==1.13.2
 chardet==3.0.4
 Click==7.0
+cryptography==2.8
+cycler==0.10.0
+Django==3.0.2
+django-mysql==3.3.0
+dnspython==1.16.0
+elasticsearch==7.5.1
+enum34==1.1.6
 Flask==1.1.1
-Flask-Admin==1.5.5
-Flask-BabelEx==0.9.4
-Flask-Dance==3.0.0
-Flask-Ext==0.1
-Flask-Login==0.5.0
+Flask-Admin==1.5.4
+Flask-Caching==1.8.0
+Flask-Login==0.4.1
 Flask-Mail==0.9.1
+flask-marshmallow==0.10.1
+Flask-Menu==0.7.1
 Flask-Migrate==2.5.2
 flask-paginate==0.5.5
-Flask-Pagination==0.0.1
-Flask-Principal==0.4.0
+Flask-Permissions==0.2.3
+Flask-Restless==0.17.0
 Flask-Script==2.0.6
-Flask-Security==3.0.0
-Flask-Social==1.6.2
 Flask-SQLAlchemy==2.4.1
-Flask-WTF==0.14.3
-google-api-core==1.16.0
-google-api-python-client==1.8.0
-google-auth==1.11.3
-google-auth-httplib2==0.0.3
-googleapis-common-protos==1.51.0
-httplib2==0.17.0
-idna==2.9
-import-string==0.1.0
+Flask-User==1.0.2.2
+Flask-WTF==0.14.2
+future==0.18.2
+gunicorn==20.0.4
+idna==2.8
 itsdangerous==1.1.0
-Jinja2==2.11.1
-jsonify==0.5
-Mako==1.1.1
-manage==0.1.13
+Jinja2==2.10.3
+kiwisolver==1.1.0
+Mako==1.1.0
 MarkupSafe==1.1.1
-mongoengine==0.19.1
+marshmallow==3.3.0
+marshmallow-sqlalchemy==0.21.0
+matplotlib==3.2.1
+mimerender==0.6.0
+multidict==4.7.4
+mysql-client==0.0.1
 mysql-connector==2.2.9
+mysql-connector-python==8.0.19
+nltk==3.4.5
 numpy==1.18.1
-oauth==1.0.1
-oauth2==1.9.0.post1
-oauth2client==4.1.3
-oauthlib==3.1.0
-pandas==1.0.1
 passlib==1.7.2
-protobuf==3.11.3
-pyasn1==0.4.8
-pyasn1-modules==0.2.8
-pymongo==3.10.1
+Pillow==6.2.1
+protobuf==3.6.1
+pycparser==2.19
+PyMySQL==0.9.3
+pyparsing==2.4.6
+pyTelegramBotAPI==3.6.7
 python-dateutil==2.8.1
 python-editor==1.0.4
+python-mimeparse==1.6.0
+python-telegram-bot==12.3.0
 pytz==2019.3
-PyYAML==5.3
-query==0.1.4
-requests==2.23.0
-requests-oauthlib==1.3.0
-rsa==4.0
+redis==3.3.11
+requests==2.22.0
 six==1.14.0
-speaklater==1.3
-SQLAlchemy==1.3.13
-uritemplate==3.0.1
-urllib3==1.25.8
-URLObject==2.4.3
+SQLAlchemy==1.3.11
+sqlparse==0.3.0
+telepot==12.7
+tflearn==0.3.2
+tornado==6.0.3
+ttkthemes==2.4.0
+urllib3==1.25.7
 validate-email==1.3
-Werkzeug==1.0.0
+virtualenv==16.7.7
+Werkzeug==0.16.0
 WTForms==2.2.1
+yarl==1.4.2
